--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
         <header> 
             <div class="container">
             <div id="branding">
-
+                <h1>Hyperion</h1>
             </div>
             <nav>
                 <ul>
