--- a/Index.html
+++ b/Index.html
@@ -19,14 +19,19 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="Index.html>Home</li>
-                    <li><a href="about.html>Home</li>
-                    <li><a href="services.html>Home</li>
+                    <li><a href="Index.html">Home</a>/li>
+                    <li><a href="about.html">Home</a></li>
+                    <li><a href="services.html">Home</a>/li>
                 </ul>
             </nav>
          </div>
         </header>
 
+        <section id="showcase">
+            <div class="container">
+                <h1>Web</h1>
+            </div>
+        </section>
 
     </body>
 </html>
