--- a/Index.html
+++ b/Index.html
@@ -29,9 +29,15 @@
 
         <section id="showcase">
             <div class="container">
-                <h1>Web</h1>
+                <h1>P</h1>
+                <p>Lorum impsum</p>
             </div>
         </section>
 
+        <section id="newsletter">
+            <div class="container">
+                <h1>subscribe</h1>
+            </div>
+        </section>
     </body>
 </html>
