--- a/root/index.html
+++ b/root/index.html
@@ -19,9 +19,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="Index.html">Home</a>/li>
+                    <li><a href="Index.html">Home</a>/<li>
                     <li><a href="about.html">Home</a></li>
-                    <li><a href="services.html">Home</a>/li>
+                    <li><a href="services.html">Home</a></li>
                 </ul>
             </nav>
          </div>
