--- a/root/index.html
+++ b/root/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="desrcription" content="Balance my balls">
-        <meta name="keywords" content="Github Site, Developer site"
-        <meta name="Author" content="Deacon E Hunter"
+        <meta name="keywords" content="Github Site, Developer site">
+        <meta name="Author" content="Deacon E Hunter">
         <title> Hyperion | Welcome</title>
         <link rel="stylesheet" href="./css/style.css">
         
