--- a/root/index.html
+++ b/root/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head?>
+    <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="desrcription" content="Balance my balls">
@@ -9,7 +9,6 @@
         <title> Hyperion | Welcome</title>
         <link rel="stylesheet" href="./css/style.css">
         
-
     </head>
     <body>
         <header> 
