--- a/root/index.html
+++ b/root/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="desrcription" content="Balance my balls">
+        <meta name="desrcription" content="Balance">
         <meta name="keywords" content="Github Site, Developer site">
         <meta name="Author" content="Deacon E Hunter">
         <title> Hyperion | Welcome</title>
@@ -15,8 +15,15 @@
             <div id="branding">
 
                 <h1>Hyperion</h1>
-
-          
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a>/<li>
+                    <li><a href="about.html">Home</a></li>
+                    <li><a href="services.html">Home</a></li>
+                </ul>
+            </nav>
+         </div>
         </header>
     </body>
 </html>
