--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
-        <meta name="keywords" content="Github Site, Developer site">
+        <meta name="keywords" content="Site, Game-website, Project">
         <meta name="Author" content="Deacon Hunter">
         <title> Hyperion | Welcome</title>
         <link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
             <div class="container">
             <div id="branding">
 
-                <h1>My Projects[temporary name]</Projects></h1>
+                <h1>Exeon</Projects></h1>
             </div>
             <nav>
                 <ul>
@@ -31,11 +31,17 @@
         </header>
     </body>
 
-    <section id="Central">
+    <section id="Main-Section">
         <div class="container">
-            <h1>S</h1>
+            <h1>About</h1>
             <p>Lorum</p>
         </div>
+
+        <aside id="sidebar">
+            <div class="dark">
+                <li><a href="https://docs.google.com/document/d/1IFX84Er_cbU9VJpIxbmMSuVT8I-eIMkvAt_5c6yJwMo/edit">Mods</a></li>
+            </div>
+        </aside>
     </section>
 
 
