--- a/index.html
+++ b/index.html
@@ -33,27 +33,17 @@
 
     <section id="Main-Section">
         <div class="container">
-            <h1>About</h1>
-            <p>Lorum</p>
+            <h1>Description</h1>
+            <p>This site is meant to be used for random little things you want, allowing you to generate random names, numbers, ect... and in the future letting you do several other things that you never thought you'd want to do.</p>
         </div>
 
         <aside id="sidebar">
-            <div class="dark">
+            <div>
                 <li><a href="https://docs.google.com/document/d/1IFX84Er_cbU9VJpIxbmMSuVT8I-eIMkvAt_5c6yJwMo/edit">Mods</a></li>
             </div>
         </aside>
     </section>
 
-
-    <section id="boxes">
-        <div class="container">
-            <div class="box">
-                <h3>HTML5 Markup</h3>
-                <p>Graphic Design</p>
-
-        </div>
-        <div class="container">
-    </section>
 
 <footer></footer>
 </html>
