--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
-        <meta name="keywords" content="Site, Game-website, Project">
+        <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
         <meta name="Author" content="Deacon Hunter">
         <title> Hyperion | Welcome</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style1.css">
 
     </head>
 
