--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
         <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
         <meta name="Author" content="Deacon Hunter">
-        <title> Hyperion | Welcome</title>
+        <title> | EXEON Project | </title>
         <link rel="stylesheet" href="css/style1.css">
 
     </head>
@@ -23,7 +23,7 @@
             <nav>
                 <ul>
                     <li class="current"><a href="index.html">HOME</a><li>
-                    <li><a href="about.html">ABOUT</a><li>
+                    <li><a href="html/about.html">ABOUT</a><li>
                     <li><a>Blank</a></li>
                 </ul>
             </nav>
@@ -39,7 +39,13 @@
 
         <aside id="sidebar">
             <div>
-                <li><a href="https://docs.google.com/document/d/1IFX84Er_cbU9VJpIxbmMSuVT8I-eIMkvAt_5c6yJwMo/edit">Mods</a></li>
+                <li><a href="html/mods.html">Mods</a></li>
+    
+                <li><a href="html/""></a></li>
+                <li><a href="html/">Mods</a></li>
+                <li><a href="html/">Mods</a></li>
+                <li><a href="html/">Mods</a></li>
+
             </div>
         </aside>
     </section>
