--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a><li>
-                    <li class="current"><a href="about.html">ABOUT</a><li>
+                    <li class="current"><a href="html/about.html">ABOUT</a><li>
                     <li><a>Blank</a></li>
                 </ul>
             </nav>
