--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
     <section id="Main-Section">
         <div class="container">
             <h1>Description</h1>
-            <p>This site is meant to be used for random little things you want, allowing you to generate random names, numbers, ect... and in the future letting you do several other things that you never thought you'd want to do.</p>
+            <p>This site will serve as a place that I will put all my games, mods, ect... that I will make or am making in the future. Aswell as many projects within the site like making random generators, ect... I don't know how far github pages will let me go but I will try to take this website as far as possible in the future possibly having help but for now its just me working on this site alone. Any suggestions are welcomed by anyone</p>
         </div>
 
         <aside id="sidebar">
             <div>
-                <li><a href="html/mods.html">Mods</a></li>
-    
-                <li><a href="html/""></a></li>
-                <li><a href="html/">Mods</a></li>
-                <li><a href="html/">Mods</a></li>
-                <li><a href="html/">Mods</a></li>
+                <h4></h4>
+                <a href="html/mods.html">Mods</a>
+                <a href="html/">Mods</a>
+                <a href="html/">Mods</a>
+                <a href="html/">Mods</a>
+                <a href="html/">Mods</a>
+            
 
             </div>
         </aside>
@@ -53,4 +54,3 @@
 
 <footer></footer>
 </html>
-
