--- a/index.html
+++ b/index.html
@@ -34,19 +34,17 @@
     <section id="Main-Section">
         <div class="container">
             <h1>Description</h1>
-            <p>This site will serve as a place that I will put all my games, mods, ect... that I will make or am making in the future. Aswell as many projects within the site like making random generators, ect... I don't know how far github pages will let me go but I will try to take this website as far as possible in the future possibly having help but for now its just me working on this site alone. Any suggestions are welcomed by anyone</p>
-        </div>
+            <p>This site will serve as a place that I will put all my games, mods, ect... that I will make or am making in the future. 
+            Aswell as many projects within the site like making random generators, ect... I don't know how 
+            far github pages will let me go but I will try to take this website 
+            as far as possible in the future possibly having help but for now its just me working on this site alone.
+            Any suggestions are welcomed by anyone</p>
 
         <aside id="sidebar">
-            <div>
                 <h4></h4>
-                <a href="html/mods.html">Mods</a>
-                <a href="html/">Mods</a>
-                <a href="html/">Mods</a>
-                <a href="html/">Mods</a>
-                <a href="html/">Mods</a>
-            
-
+                <li><a href="html/mod.html">Mods</a></li>
+                <li><a href="html/mod.html">Mods</a></li>
+                <li><a href="html/mod.html">Mods</a></li>
             </div>
         </aside>
     </section>
@@ -54,3 +52,5 @@
 
 <footer></footer>
 </html>
+
+<style></style>
