--- a/html/about.html
+++ b/html/about.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
-        <meta name="keywords" content="Site, Game-website, Project">
-        <meta name="Author" content="Deacon Hunter">
-        <title> Hyperion | Welcome</title>
-        <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description"
+        content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
+    <meta name="keywords" content="Site, Game-website, Project">
+    <meta name="Author" content="Deacon Hunter">
+    <title> Hyperion | Welcome</title>
+    <link rel="stylesheet" href="css/style.css">
 
-    </head>
+</head>
 
-    <body>
-        <header> 
-            <div class="container">
+<body>
+    <header>
+        <div class="container">
             <div id="About">
-                <h1>About Site <h2>Explanation of this website</h2> </h1>
+                <h1>About Site <h2>Explanation of this website</h2>
+                </h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a><li>
-                    <li class="current"><a href="html/about.html">ABOUT</a><li>
+                    <li><a href="index.html">HOME</a>
+                    <li>
+                    <li class="current"><a href="html/about.html">ABOUT</a>
+                    <li>
                     <li><a>Blank</a></li>
                 </ul>
             </nav>
-         </div>
-        </header>
-        <section id="Main">
-            <article id="main-col">
-                <h1 class="page-title">About site.</h1>
+        </div>
+    </header>
+    <section id="Main">
+        <article id="main-col">
+            <h1 class="page-title">About site.</h1>
 
-                <p>
-                    Loreum
-                <p>
-                </p>
-                    Ipsum
-                </p>
+            <p>
+                Loreum
+            <p>
+            </p>
+            Ipsum
+            </p>
 
-            </article>
+        </article>
 
-        </section>
-    </body>
-    
+    </section>
+</body>
+
 <footer></footer>
 <html>
