--- a/index.html
+++ b/index.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <meta name="description" content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
-        <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
-        <meta name="Author" content="Deacon Hunter">
-        <title> | EXEON Project | </title>
-        <link rel="stylesheet" href="css/style1.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description"
+        content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
+    <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
+    <meta name="Author" content="Deacon Hunter">
+    <title> | EXEON Project | </title>
+    <link rel="stylesheet" href="css/style1.css">
 
-    </head>
+</head>
 
-    <body>
-        <header> 
-            <div class="container">
+<body>
+    <header>
+        <div class="container">
             <div id="branding">
 
-                <h1>Exeon</Projects></h1>
+                <h1>Exeon</Projects>
+                </h1>
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">HOME</a><li>
-                    <li><a href="html/about.html">ABOUT</a><li>
-                    <li><a>Blank</a></li>
+                    <li class="current"><a href="index.html">HOME</a>
+                    <li>
+                    <li><a href="html/about.html">ABOUT</a>
+                    <li>
+
                 </ul>
             </nav>
-         </div>
-        </header>
-    </body>
+        </div>
+    </header>
+</body>
 
-    <section id="Main-Section">
-        <div class="container">
-            <h1>Description</h1>
-            <p>This site will serve as a place that I will put all my games, mods, ect... that I will make or am making in the future. 
-            Aswell as many projects within the site like making random generators, ect... I don't know how 
-            far github pages will let me go but I will try to take this website 
-            as far as possible in the future possibly having help but for now its just me working on this site alone.
-            Any suggestions are welcomed by anyone</p>
-
-        <aside id="sidebar">
+<section id="Main-Section">
+    <div class="container">
+        <h1>Description</h1>
+        <p>In the future this site will be used as  a</p>
+        <div>
+            <aside id="sidebar">
                 <h4></h4>
                 <li><a href="html/mod.html">Mods</a></li>
                 <li><a href="html/mod.html">Mods</a></li>
                 <li><a href="html/mod.html">Mods</a></li>
-            </div>
+                <li><a href="html/mod.html">Mods</a></li>
+
+        </div>
         </aside>
-    </section>
+</section>
 
 
 <footer></footer>
+
 </html>
