--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <section id="Main-Section">
     <div class="container">
         <h1>Description</h1>
-        <p>In the future this site will be used as  a</p>
+        <p>This site will be used for several different things mainly as a place for me 
+            to add random things to sink my time into </p>
         <div>
          
 </section>
