--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
         <h1>Description</h1>
         <p>This site will be used for several different things mainly as a place for me 
-            to add random things to sink my time into </p>
+            to add random things to sink my time into this basically its just a pointless site with links to less but also more pointless things </p>
         <div>
          
 </section>
