--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Site, Game-website, Project">
     <meta name="Author" content="Deacon Hunter">
     <title> Hyperion | Welcome</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style1.css">
 
 </head>
 
