--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container">
-            <div id="branding">
+            <div id="title">
 
                 <h1>Exeon</Projects>
                 </h1>
@@ -26,7 +26,7 @@
                 <ul>
                     <li class="current"><a href="index.html">HOME</a>
                     <li>
-                    <li><a href="html/about.html">ABOUT</a>
+                    <li><a href="html/about.html">Inx3</a>
                     <li>
 
                 </ul>
@@ -39,7 +39,8 @@
     <div class="container">
         <h1>Description</h1>
         <p>This site will be used for several different things mainly as a place for me 
-            to add random things to sink my time into this basically its just a pointless site with links to less but also more pointless things </p>
+            to add random things to sink my time into this basically its just a pointless site with links to
+        less but also at the same time more useful things</p>
         <div>
          
 </section>
