--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              showcase/tutorials for my mods, games, random-gens ect... all that I will be making in the short future 
              hopefully I can fill this site with many different things in the future</p>
 
-        </p>If you would like to help contribute to the making and creation of this site head the this link <a href="soundcloud.com">Annoying</a></p>
+        <p>If you would like to help contribute to the making and creation of this site head the this link <a href="soundcloud.com">Annoying</a></p>
          
         <div>
 
