--- a/index.html
+++ b/index.html
@@ -45,19 +45,13 @@
         <p>If you would like to help contribute to the making and creation
             of this site click this <a href="https://github.com/DELUXEHUNTER/exeon">link</a>.
             Anyone may contribute to the site as long as they do not ruin the site for the others
-            or remove major things like one of the generators, ect... 
-            If you contribute and want to have credit for a page you add then add it to the footer or something else located near the bottom of the page
+            or remove major things like one of the generators, ect...
+            If you contribute and want to have credit for a page you add then add it to the footer or something else
+            located near the bottom of the page
         </p>
-        
+
 
         <div>
-
-</section>
-
-<section id="Section2">
-
-
-
 
 </section>
 
