--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-
+<head id="Meta-Data">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description"
         content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
+    <meta name="source" content="https://github.com/DELUXEHUNTER/exeon">
     <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
     <meta name="Author" content="Deacon Hunter">
     <title> | EXEON Project | </title>
