--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">HOME</a>
+                    <li class="current"><a href="games.html">Games&Mods</a>
                     <li>
                 </ul>
             </nav>
@@ -48,13 +48,23 @@
             or remove major things like one of the generators, ect...
             If you contribute and want to have credit for a page you add then add it to the footer or something else
             located near the bottom of the page
+
         </p>
 
 
         <div>
 
 </section>
+<div class="container">
+    <h1>Index</h1>
+    <p>This is where all the links 
+        to several of the different pages on this site, for our games, mods, generators, tutorials ect.... basically having every link to several different pages   </p>
+</div>
 
+<section2>
+
+
+</section2>
 
 <footer></footer>
 
