--- a/index.html
+++ b/index.html
@@ -55,17 +55,40 @@
         <div>
 
 </section>
+
+<section id="Section2">
+
+
+
 <div class="container">
     <h1>Index</h1>
     <p>This is where all the links 
         to several of the different pages on this site, for our games, mods, generators, tutorials ect.... basically having every link to several different pages   </p>
 </div>
 
-<section2>
 
+<div class="row">
+    <div class="column">
+        <h3>Mods</h3>
+        <li><a href="">S</a></li>
+        <li><a href="">S</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </div>
+    <div class="column">
+        <h3 id="m">Games</h3>
+        <li><a href="">S</a></li>
+        <li><a href="">S</a></li>
+        <li><a href="">S</a></li>
+        <li><a href="">S</a></li>
+        <li><a href="">S</a></li>
+    </div>
+  </div>
 
 </section2>
+
 
 <footer></footer>
 
 </html>
+
