--- a/index.html
+++ b/index.html
@@ -52,43 +52,23 @@
         </p>
 
 
+        <aside id="sidebar">
+            <h4>Index</h4>
+            <div>
+                <a href="index.html">S</a>
+                <a href="index.html">S</a>
+            </div>
+        </aside>
         <div>
 
 </section>
-
-<section id="Section2">
-
-
-
-<div class="container">
-    <h1>Index</h1>
-    <p>This is where all the links 
-        to several of the different pages on this site, for our games, mods, generators, tutorials ect.... basically having every link to several different pages   </p>
-</div>
-
-
-<div class="row">
-    <div class="column">
-        <h3>Mods</h3>
-        <li><a href="">S</a></li>
-        <li><a href="">S</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-    </div>
-    <div class="column">
-        <h3 id="m">Games</h3>
-        <li><a href="">S</a></li>
-        <li><a href="">S</a></li>
-        <li><a href="">S</a></li>
-        <li><a href="">S</a></li>
-        <li><a href="">S</a></li>
-    </div>
-  </div>
-
-</section2>
-
-
 <footer></footer>
 
 </html>
 
+<style>
+.sidebar{
+    float:left;
+}
+
+</style>
