--- a/index.html
+++ b/index.html
@@ -67,8 +67,110 @@
 </html>
 
 <style>
-.sidebar{
-    float:left;
-}
+    /* File covers first few html files */
 
+    body {
+        font: 15px/1.5 Arial, Helvetica, sans-serif;
+        padding: 0;
+        margin: 0;
+        background-color: rgb(0, 0, 0);
+
+    }
+
+
+    /* Global */
+    .container {
+        width: 80%;
+        margin: auto;
+        overflow: hidden;
+    }
+
+
+    footer {
+        border-top: #890606 4px solid;
+    }
+
+    /* Header */
+    header {
+
+        background: rgba(206, 3, 3, 0.919) padding;
+        top: 30px;
+        min-height: 60px;
+        border-bottom: #8b0000 4px solid;
+        color: #8b0000;
+    }
+
+    header a {
+        text-decoration: none;
+        text-transform: capitalize;
+        font-size: 16px;
+        color: #8b0000;
+    }
+
+    header u {
+        margin: 0;
+        padding: 0;
+        color: #8b0000;
+    }
+
+    header li {
+        float: left;
+        display: inline;
+        padding: 0 20px 0 20px;
+        color: #8b0000;
+    }
+
+    header #title {
+        float: left;
+        color: #8b0000;
+    }
+
+    header #title h1 {
+        margin: 0;
+        color: #8b0000;
+        padding-top: 4px;
+    }
+
+    header nav {
+        float: right;
+        margin-top: 10px;
+        color: #8b0000;
+
+    }
+
+    header .hightlight,
+    header .current a {
+        color: #e4d7d73d;
+        font-weight: bold;
+    }
+
+    #Section1 {
+        min-height: 200px;
+
+    }
+
+    #Section1 h1 {
+        margin-top: 1.3px;
+        font-size: 55px;
+        margin-bottom: 3px;
+        color: rgb(74, 10, 24);
+        margin: 0.6px
+    }
+
+    #Section1 p {
+        width: 79%;
+        float: left;
+        font-size: 20px;
+        color: #8b0000;
+        text-align: justify left;
+        margin: .2px;
+    }
+
+
+    #sidebar {
+        float:right;
+        margin: 10px;
+        padding-left: 40px;
+        border-left: #8b0000 4px solid
+    }
 </style>
