--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
         font-size: 55px;
         margin-bottom: 3px;
         color: rgb(74, 10, 24);
-        margin: 0.6px
+        margin: 0.6px;
+        float:left
     }
 
     #Section1 p {
