--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <section id="Section1">
     <div class="container">
-        <h1>About Site.</h1>
+        <h1>Site Information</h1>
         <p>Welcome to Exeon. Obviously, Exeon is a temporary site name because I just cannot think of an actual good
             name.
             So for now, I will just stick with it. But anyway, this site is going to be used for/to
@@ -55,8 +55,8 @@
         <aside id="sidebar">
             <h4>Index</h4>
             <div>
-                <a href="index.html">S</a>
-                <a href="index.html">S</a>
+                <a href="index.html"></a>
+                <a href="index.html"></a>
             </div>
         </aside>
         <div>
@@ -66,112 +66,3 @@
 
 </html>
 
-<style>
-    /* File covers first few html files */
-
-    body {
-        font: 15px/1.5 Arial, Helvetica, sans-serif;
-        padding: 0;
-        margin: 0;
-        background-color: rgb(0, 0, 0);
-
-    }
-
-
-    /* Global */
-    .container {
-        width: 80%;
-        margin: auto;
-        overflow: hidden;
-    }
-
-
-    footer {
-        border-top: #890606 4px solid;
-    }
-
-    /* Header */
-    header {
-
-        background: rgba(206, 3, 3, 0.919) padding;
-        top: 30px;
-        min-height: 60px;
-        border-bottom: #8b0000 4px solid;
-        color: #8b0000;
-    }
-
-    header a {
-        text-decoration: none;
-        text-transform: capitalize;
-        font-size: 16px;
-        color: #8b0000;
-    }
-
-    header u {
-        margin: 0;
-        padding: 0;
-        color: #8b0000;
-    }
-
-    header li {
-        float: left;
-        display: inline;
-        padding: 0 20px 0 20px;
-        color: #8b0000;
-    }
-
-    header #title {
-        float: left;
-        color: #8b0000;
-    }
-
-    header #title h1 {
-        margin: 0;
-        color: #8b0000;
-        padding-top: 4px;
-    }
-
-    header nav {
-        float: right;
-        margin-top: 10px;
-        color: #8b0000;
-
-    }
-
-    header .hightlight,
-    header .current a {
-        color: #e4d7d73d;
-        font-weight: bold;
-    }
-
-    #Section1 {
-        min-height: 200px;
-
-    }
-
-    #Section1 h1 {
-        margin-top: 1.3px;
-        font-size: 55px;
-        margin-bottom: 3px;
-        color: rgb(74, 10, 24);
-        margin: 0.6px;
-        float:left
-    }
-
-    #Section1 p {
-        width: 79%;
-        float: left;
-        font-size: 20px;
-        color: #8b0000;
-        text-align: justify left;
-        margin: .2px;
-    }
-
-
-    #sidebar {
-        float:right;
-        margin: 10px;
-        padding-left: 40px;
-        border-left: #8b0000 4px solid
-    }
-</style>
