--- a/html/mods.html
+++ b/html/mods.html
@@ -9,7 +9,7 @@
     <meta name="source" content="https://github.com/DELUXEHUNTER/exeon">
     <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
     <meta name="Author" content="Deacon Hunter">
-    <title> Games | Exeon </title>
+    <title>  Mods | Exeon </title>
     <link rel="stylesheet" href="css/style1.css">
 
 </head>
@@ -45,8 +45,8 @@
         <aside id="sidebar">
             <h4>Index</h4>
             <div>
-                <li><a href="/html/mods.html">Mods</a></li>
-                <li class="current"><a href="/html/games.html">Games</a></li>
+                <li  class="current"><a href="/html/mods.html">Mods</a></li>
+                <li><a href="/html/games.html">Games</a></li>
                 <li><a href="/html/misc.html">Misc</a></li>
             </div>
         </aside>
