--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             Anyone may contribute to the site as long as they do not ruin the site for the others
             or remove major things like one of the generators, ect...
             If you contribute and want to have credit for a page you add then add it to the footer or something else
-            located near the bottom of the page
+            located near the bottom of the page, this probably seems obvious, or if wanted add a credit file. and add
+            your name to it
 
         </p>
 
@@ -55,8 +56,9 @@
         <aside id="sidebar">
             <h4>Index</h4>
             <div>
-                <a href="index.html"></a>
-                <a href="index.html"></a>
+                <a href="/html/mods.html">Mods</a>
+                <a href="/html/games.html">Games</a>
+                <a href="/html/misc.html">Misc</a>
             </div>
         </aside>
         <div>
@@ -65,4 +67,3 @@
 <footer></footer>
 
 </html>
-
