--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <aside id="sidebar">
             <h4>Index</h4>
             <div>
-                <a href="/html/mods.html">Mods</a>
-                <a href="/html/games.html">Games</a>
-                <a href="/html/misc.html">Misc</a>
+                <li> <a href="/html/mods.html">Mods</a></li>
+                <li> <a href="/html/games.html">Games</a></li>
+                <li> <a href="/html/misc.html">Misc</a></li>
             </div>
         </aside>
         <div>
