--- a/html/credit.html
+++ b/html/credit.html
@@ -1,5 +1,6 @@
-*/ This Page is used when someone would like to have credit for the pages or code they add to a Page
+/* This Page is used when someone would like to have credit for the pages or code they add to a Page
 
 Currenly useless and may always be useless. The first person to access this page may format it however you want
-note if I have formated this page you can change the formatting. Unless specified
+note if I have formated this page you can change the formatting. Unless specified */
+
 
