--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
 
 </section>
 
-<section id="credit-section"
+<section id="credit-section">
     
-    <section>
+
+    
+</section>
 
 
 <footer></footer>
