--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 <head id="Meta-Data">
@@ -6,12 +7,11 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description"
         content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
-    <meta name="source" content="https://github.com/DELUXEHUNTER/exeon">
+    <meta name="source" content="https://github.com/DELUXEHUNTER/Newport-Institution">
     <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
     <meta name="Author" content="Deacon Hunter">
-    <title> | EXEON Project | </title>
-    <link rel="stylesheet" href="css/style1.css">
-
+    <title></title>
+    <link rel="stylesheet" href="css/insi.css">
 </head>
 
 <body>
@@ -19,9 +19,10 @@
         <div class="container">
             <div id="title">
 
-                <h1>Exeon</Projects>
+                <h1>Newport Institution</Projects>
                 </h1>
             </div>
+
             <nav>
                 <ul>
                     <li class="current"><a href="games.html">Games&Mods</a>
@@ -34,34 +35,13 @@
 
 <section id="Section1">
     <div class="container">
-        <h1>Site Information</h1>
-        <p>Welcome to Exeon. Obviously, Exeon is a temporary site name because I just cannot think of an actual good
-            name.
-            So for now, I will just stick with it. But anyway, this site is going to be used for/to
-            showcases and tutorials for my mods, games, random-gens, ect... all that I will be making in the short
-            future.
-            Hopefully, I can fill this site with many different things in the future.</p>
+        <h1></h1>
+        <p>
+            
 
-        <p>If you would like to help contribute to the making and creation
-            of this site click this <a href="https://github.com/DELUXEHUNTER/exeon">link</a>.
-            Anyone may contribute to the site as long as they do not ruin the site for the others
-            or remove major things like one of the generators, ect... this entire project is just for fun 
         </p>
-
-
-        <aside id="sidebar">
-            <h4>Index</h4>
-            <div>
-                <li> <a href="/html/mods.html">Mods</a></li>
-                <li> <a href="/html/games.html">Games</a></li>
-                <li> <a href="/html/misc.html">Misc</a></li>
-            </div>
-        </aside>
-        <div>
-
 </section>
 
 
 <footer></footer>
-
 </html>
