--- a/html/record path.html
+++ b/html/record path.html
@@ -8,10 +8,9 @@
         content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
     <meta name="source" content="https://github.com/DELUXEHUNTER/exeon">
     <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
-    <meta name="Author" content="Deacon Hunter">
-    <title> Miscellaneous | Exeon </title>
-    <link rel="stylesheet" href="css/style1.css">
-
+    <meta name="Author" content="Deacon.">
+    <title> Games | Exeon </title>
+    <link rel="stylesheet" href="css/insi.css">
 </head>
 
 <body>
@@ -46,8 +45,8 @@
             <h4>Index</h4>
             <div>
                 <li><a href="/html/mods.html">Mods</a></li>
-                <li><a href="/html/games.html">Games</a></li>
-                <li class="current"><a href="/html/misc.html">Misc</a></li>
+                <li class="current"><a href="/html/games.html">Games</a></li>
+                <li><a href="/html/misc.html">Misc</a></li>
             </div>
         </aside>
         <div>
