--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description"
-        content="Small website used for my mod guides and other things. very simple due to me being new and it being on github pages">
+    content="The front page">
     <meta name="source" content="https://github.com/DELUXEHUNTER/Newport-Institution">
     <meta name="keywords" content="Site, Game-website, Project, work-in-progress">
     <meta name="Author" content="Deacon Hunter">
@@ -18,17 +18,11 @@
     <header>
         <div class="container">
             <div id="title">
-
-                <h1>Newport Institution</Projects>
-                </h1>
+                <h1>Newport Institution</h1>
+                <p>Welcome,<br>
+                The Newport institution is a well known institution 
+                </p>
             </div>
-
-            <nav>
-                <ul>
-                    <li class="current"><a href="games.html">Games&Mods</a>
-                    <li>
-                </ul>
-            </nav>
         </div>
     </header>
 </body>
